--- a/SourceCode/2023/Nov2023/Mrinali/Task2/~Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task2/~Main.xaml
@@ -77,7 +77,7 @@
       <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence sap2010:Annotation.AnnotationText="Arithemetic Operations(Addition. Substraction and Multiplication)" DisplayName="Perform Arithmetic Operations" sap:VirtualizedContainerService.HintSize="450,1856.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_3">
+  <Sequence sap2010:Annotation.AnnotationText="Arithemetic Operations(Addition. Substraction and Multiplication)" DisplayName="Perform Arithmetic Operations" sap:VirtualizedContainerService.HintSize="450,1887.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_3">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="FirstNum" />
       <Variable x:TypeArguments="x:Int32" Name="SecondNum" />
@@ -125,7 +125,13 @@
       </sap:WorkflowViewStateService.ViewState>
     </ui:MessageBox>
     <ui:LogMessage DisplayName="Substracting first and second Number" sap:VirtualizedContainerService.HintSize="388,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Numbers Substracted Successfully&quot;]" />
-    <ui:LogMessage DisplayName="Multiplication Output" sap:VirtualizedContainerService.HintSize="388,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[FirstNum*SecondNum]" />
+    <ui:LogMessage sap2010:Annotation.AnnotationText="Multiplication result" DisplayName="Multiplication Output" sap:VirtualizedContainerService.HintSize="388,175.33333333333334" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[FirstNum*SecondNum]">
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+    </ui:LogMessage>
     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Multiplying first and Second Number" sap:VirtualizedContainerService.HintSize="388,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;Numbers Multiplied Successfully&quot;]" />
   </Sequence>
 </Activity>
