--- a/SourceCode/2023/Nov2023/Pavankumar/task9/~Main.xaml
+++ b/SourceCode/2023/Nov2023/Pavankumar/task9/~Main.xaml
@@ -72,6 +72,7 @@
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
       <AssemblyReference>UiPath.Platform</AssemblyReference>
+      <AssemblyReference>GlobalVariablesT1PNoYwrqg</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,1178.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -113,6 +114,6 @@
       </Assign.Value>
     </Assign>
     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Result" sap:VirtualizedContainerService.HintSize="433.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[Result]" />
-    <ui:WriteTextFile File="{x:Null}" DisplayName="Write Text File" FileName="FullName.Txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[Result]" />
+    <ui:WriteTextFile File="{x:Null}" DisplayName="Fullname Txt" FileName="FullName.Txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[Result]" />
   </Sequence>
 </Activity>
